00006391: Improved link action in module "tiles"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render-tile.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render-tile.tml
@@ -1,5 +1,3 @@
-##MDSET preprocess=true
-
 <tml:script>
 	var url = null,
 		link_title = "", 
@@ -8,10 +6,26 @@
 		var ctx = context("docid:"+CMM.setting("wgakey")) 
 		url = ctx.contenturl()
 		link_title = ctx.TITLE
+		if(link_target=="default")
+			link_target=null;
 	}
 	else if(CMM.setting("link")=="ext"){
 		url = CMM.setting("url");
 		link_title = url
+		if(link_target=="default")
+			link_target="_blank";
+	}
+	else if(CMM.setting("link")=="mailto"){
+		url = "mailto:"+CMM.setting("mailto");
+		link_title = CMM.setting("mailto");
+		if(link_target=="default")
+			link_target=null;
+	}
+	else if(CMM.setting("link")=="intfile"){
+		url = fileurl(CMM.setting("filename"));
+		link_title = CMM.setting("filename")
+		if(link_target=="default")
+			link_target="_blank";
 	}
 
 	_wrap_tag = url ? "a" : "div";
