--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/delete-attachments.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/delete-attachments.tml
@@ -96,7 +96,7 @@
 		<tml:case if="_usedFiles.size">
 			<b style="color:red">ACHTUNG:</b>
 			<p>
-				Die rot markierten Dateien werden derzeit noch in Inhaltsmodulen oder Richtext Feldern auf dieser Seite verwendet.
+				Die rot markierten Dateien werden möglicherweise derzeit noch in Inhaltsmodulen oder Richtext Feldern auf dieser Seite verwendet.
 			</p>
 		</tml:case>
 	
