--- a/OpenWGA/plugins/cm-modules/design/tml/html/util/select-image.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/util/select-image.tml
@@ -23,4 +23,4 @@
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
 
-<tml:include ref="::select-file" o_file-extensions="jpg,jpeg,png,gif,svg"/>
+<tml:include ref="::select-file" o_mimetype="image"/>
