00006403: Added option to disallow logins for defined hosts

--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
@@ -84,6 +84,7 @@
 
 <fieldset>
 	<legend>Restrictions</legend>
+	<tml:[system:fs-input] o_field="loginsAllowed" o_type="boolean"/>
 	<tml:[system:fs-input] o_field="allowAdminApps" o_type="boolean"/>
 	<tml:[system:fs-input] o_field="allowAuthoringApps" o_type="boolean"/>
 </fieldset>	
