00006428: Module accordion: added option to open multiple pages

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/render.tml
@@ -38,14 +38,10 @@
 				,active: 0
 				,delay: 10
 			</tml:case>
+			<tml:case condition="CMM.setting('multiple')">
+				,multiple: true
+			</tml:case>
 		})
-		<tml:comment>
-			the following is no longer nesessary bc. we now fire window.resize event on page activation.
-			See #00005374
-			.on("activated", function(ev, el){
-				WGA.event.fireEvent("CMM-element-activated", "CMM", {el:el})
-			})
-		</tml:comment>
 		.css("opacity", 1);
 	})
 </tml:[script]>
