00006429: Improved content modules css classes list

--- a/OpenWGA/plugins/cm-modules/design/tml/html/system/include-module.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/system/include-module.tml
@@ -32,7 +32,7 @@
 </tml:[script]>
 
 <tml:{div} if="$mc.tml" wrapif="!$option_raw"
-	html_class="[module module-{$mc.module_id} {$mc.moduleCssClasses} {option('module-class')}]"
+	html-class="$mc.localModuleCssClasses"
 	html_style="{$mc.mod_config.margins===false ? VOID : option('module-style')}"
 	html_id="[module-{$mc.id}]"
 	trim="true"
