00006431: Module image-wall: added jquery-swipehandler if lightbox enabled

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
@@ -91,7 +91,7 @@
 		$("#album-<tml:option name="ns"/>").imageAlbum();
 	});
 	<tml:case condition="CMM.setting('lightbox')">
-		require(["jquery", "jquery-lightbox"], function($){
+		require(["jquery", "jquery-lightbox", "jquery-swipehandler"], function($){
 			$("#album-<tml:option name="ns"/>").find("img").lightbox({
 				group: "<tml:script expression="CMM.setting('image_group')||'default'"/>",
 				download: <tml:script expression="CMM.setting('download')"/>
